# portfolio-site

./: .gitignore  Cargo.toml  reset.sh  update_db.sh
.claude/: all-photos-view-plan.md
src/: handlers.rs  main.rs  nether.rs  paths.rs  people.rs  state.rs  thumbs.rs  views.rs
static/: collapse.js  graph.js  lightbox.js  style.css
