[package]
name = "portfolio-site"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
maud = { version = "0.26", features = ["axum"] }
anyhow = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
kamadak-exif = "0.5"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
